force-app/main/default/objects/DepositWithdrawalDetail__c/DepositWithdrawalDetail__c.object-meta.xml
<CustomObject>
    <label>入出金明細</label>
    <nameField>
        <displayFormat>DWD-{00000000}</displayFormat>
        <label>入出金明細#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>