force-app/main/default/objects/DepositWithdrawalDetail__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>入出金明細</relationshipLabel>
    <relationshipName>DepositWithdrawalDetailList</relationshipName>
    <type>Lookup</type>
</CustomField>