force-app/main/default/objects/DepositWithdrawalDetail__c/fields/Finished__c.field-meta.xml
<CustomField>
    <fullName>Finished__c</fullName>
    <defaultValue>false</defaultValue>
    <label>完了</label>
    <type>Checkbox</type>
</CustomField>