force-app/main/default/objects/DepositWithdrawalDetail__c/fields/Income__c.field-meta.xml
<CustomField>
    <fullName>Income__c</fullName>
    <label>入金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>