force-app/main/default/objects/DepositWithdrawalDetail__c/fields/InvoiceDocument__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDocument__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>請求書</label>
    <referenceTo>InvoiceDocument__c</referenceTo>
    <relationshipLabel>入出金明細</relationshipLabel>
    <relationshipName>InvoiceTransactionDetails</relationshipName>
    <type>Lookup</type>
</CustomField>