force-app/main/default/objects/DepositWithdrawalDetail__c/fields/Outflow__c.field-meta.xml
<CustomField>
    <fullName>Outflow__c</fullName>
    <label>出金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>