force-app/main/default/objects/DepositWithdrawalDetail__c/fields/PaymentDocument__c.field-meta.xml
<CustomField>
    <fullName>PaymentDocument__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>支払書</label>
    <referenceTo>InvoiceDocument__c</referenceTo>
    <relationshipLabel>入出金明細 (支払書)</relationshipLabel>
    <relationshipName>PaymentTransactionDetails</relationshipName>
    <type>Lookup</type>
</CustomField>